<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toilet_details"
        android:id="@+id/tvToiletDetails"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:layout_below="@id/tvToiletDetails"
    android:layout_marginTop="20dp"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
    android:id="@+id/tvT"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_title"
        android:layout_below="@id/tvT"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/tvTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:id="@+id/tvA"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvA"
        android:text="@string/mock_address"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_below="@id/tvAddress"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:id="@+id/tvR"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_rating"
        android:layout_below="@id/tvR"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/tvRating"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/tvRating"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:id="@+id/tvD"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_dest"
        android:layout_below="@id/tvD"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/tvDescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvDescription">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_thumbs_up_checked"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:id="@+id/tvThumbUp"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_thumbs_down_checked"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:id="@+id/tvThumbDown"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>


</RelativeLayout>