<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addToiletFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AddToiletFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_toilet"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:id="@+id/head"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_toilet_sentence"
        android:layout_below="@id/head"
        android:layout_marginRight="80dp"
        android:layout_marginTop="5dp"
        android:id="@+id/caption"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caption"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:id="@+id/titleLabel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_below="@id/titleLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTitle"
        android:text="@string/address"
        android:layout_marginTop="5dp"
        android:id="@+id/addressLabel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddress"
        android:layout_below="@id/addressLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddress"
        android:text="@string/rating"
        android:layout_marginTop="5dp"
        android:id="@+id/ratingLabel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <SeekBar
        android:id="@+id/sbRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingLabel"
        android:layout_marginTop="10dp"
        android:max="5"
        android:progress="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sbRating"
        android:text="@string/description"
        android:layout_marginTop="5dp"
        android:id="@+id/destLabel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@id/destLabel"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGreen"
        android:elevation="5dp"
        android:id="@+id/btnDone"/>


</RelativeLayout>