<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_title"
        android:id="@+id/tvTitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="5dp"
        android:id="@+id/tvAddress"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/mock_address"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddress"
        android:layout_marginTop="5dp"
        android:id="@+id/tvDistance"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/mock_distance"
        />

</RelativeLayout>