<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_above="@id/detailsRelLayout"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/ivBack"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp"
        android:id="@+id/detailsRelLayout"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:id="@+id/titleLabel"
            android:layout_alignParentTop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleLabel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/mock_address"
            android:id="@+id/addressLabel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressLabel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/mock_rating"
            android:id="@+id/ratingLabel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingLabel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/mock_dest"
            android:id="@+id/destLabel"
            />

        <Button
            android:id="@+id/btnReached"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/lightGreen"
            android:text="@string/reached" />
    </RelativeLayout>

</RelativeLayout>